@@ -4,9 +4,3 @@
 #undef HAVE_LC_MESSAGES
 #undef HAVE_STPCPY
 #undef HAVE_LIBSM
-#undef GHFW_MAJOR_VERSION
-#undef GHFW_MINOR_VERSION
-#undef GHFW_MICRO_VERSION
-#undef GHFW_INTERFACE_AGE
-#undef GHFW_BINARY_AGE
-
