@@ -280,18 +280,20 @@ dnl Computing GHFW_values
 GHFW_INCLUDEDIR="-I${includedir}"
 GHFW_CFLAGS="$GNOMEUI_CFLAGS $GTK_CFLAGS $WIN32_CFLAGS"
 GHFW_LIBDIR="-L${libdir}"
-GHFW_LIBS="-lghfaxwidgets $GTK_LIBS $GNOMEUI_LIBS $WIN32_LIBS"
+GHFW_LIBS="-lghfax_widgets $GTK_LIBS $GNOMEUI_LIBS $WIN32_LIBS"
 AC_SUBST(GHFW_VERSION)
 AC_SUBST(GHFW_INCLUDEDIR)
 AC_SUBST(GHFW_CFLAGS)
 AC_SUBST(GHFW_LIBDIR)
 AC_SUBST(GHFW_LIBS)
 
-AC_DEFINE(GHFW_MAJOR_VERSION)
-AC_DEFINE(GHFW_MINOR_VERSION)
-AC_DEFINE(GHFW_MICRO_VERSION)
-AC_DEFINE(GHFW_INTERFACE_AGE)
-AC_DEFINE(GHFW_BINARY_AGE)
+AC_SUBST(GHFW_MAJOR_VERSION)
+AC_SUBST(GHFW_MINOR_VERSION)
+AC_SUBST(GHFW_MICRO_VERSION)
+AC_SUBST(GHFW_INTERFACE_AGE)
+AC_SUBST(GHFW_BINARY_AGE)
+
+AC_SUBST(CFLAGS)
 
 AM_CONDITIONAL(TARGET_GNU, test $OS = GNU)
 AM_CONDITIONAL(TARGET_WIN32, test $OS = WIN32)
