@@ -1,8 +1,22 @@
 SUBDIRS = pixmaps
 
+GHFW_MAJOR_VERSION=@GHFW_MAJOR_VERSION@
+GHFW_MINOR_VERSION=@GHFW_MINOR_VERSION@
+GHFW_MICRO_VERSION=@GHFW_MICRO_VERSION@
+GHFW_BINARY_AGE=@GHFW_BINARY_AGE@
+GHFW_INTERFACE_AGE=@GHFW_INTERFACE_AGE@
+
 lib_LTLIBRARIES = libghfax_widgets.la
 
 noinst_HEADERS = i18n.h
+
+CPPFLAGS = -DGHFW_MAJOR_VERSION=$(GHFW_MAJOR_VERSION) \
+	-DGHFW_MINOR_VERSION=$(GHFW_MINOR_VERSION) \
+	-DGHFW_MICRO_VERSION=$(GHFW_MICRO_VERSION) \
+	-DGHFW_INTERFACE_AGE=$(GHFW_INTERFACE_AGE) \
+	-DGHFW_BINARY_AGE=$(GHFW_BINARY_AGE)
+
+CFLAGS = @CFLAGS@ @DEBUG_CFLAGS@ @WIN32_CFLAGS@ @GNOMEUI_CFLAGS@ @GTK_CFLAGS@ @WIN32_CFLAGS@
 
 # libghfax_widgets.la
 
@@ -13,7 +27,6 @@ libghfax_widgets_la_SOURCES = ghfwdlgwindow.c ghfwprogress.c \
 				ghfwurlzone.c ghfwthumbbox.c \
 				ghfaxwidgets.c
 
-libghfax_widgets_la_CFLAGS = @DEBUG_CFLAGS@ @WIN32_CFLAGS@ @GNOMEUI_CFLAGS@ @GTK_CFLAGS@ @WIN32_CFLAGS@
 libghfax_widgets_la_LDFLAGS = -release $(LT_RELEASE) \
 		-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 		-export-dynamic \
